--- a/app.html
+++ b/app.html
@@ -5,121 +5,129 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>PlantBuddy</title>
   <style>
-    :root{
-      --bg:#0b0f19;
-      --card:#141a2a;
-      --muted:#a7b0c0;
-      --text:#e9eef8;
-      --danger:#ff5a5f;
-      --ok:#33d17a;
-      --warn:#ffb020;
-      --border:rgba(255,255,255,.08);
-      --btn:#1f3b82;
-      --btnText:#e9eef8;
-      --shadow:0 8px 28px rgba(0,0,0,.45);
-      --radius:16px;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,Arial,sans-serif;
-      background:var(--bg);
-      color:var(--text);
-    }
-    .wrap{
-      max-width:720px;
-      margin:0 auto;
-      padding:16px 16px calc(24px + env(safe-area-inset-bottom));
-    }
-    .hrow{display:flex;align-items:center;gap:10px;margin:8px 0 6px}
-    .hicon{font-size:18px}
-    h1{font-size:28px;line-height:1.1;margin:0}
-    .sub{color:var(--muted);margin:0 0 14px}
-    .banner{
-      margin:10px 0 14px;
-      padding:12px 12px;
-      border:1px solid var(--border);
-      border-radius:12px;
-      color:var(--muted);
-      background:rgba(255,255,255,.03);
-    }
-    .err{
-      margin-top:10px;
-      color:var(--danger);
-      white-space:pre-wrap;
-      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-      font-size:12px;
-    }
-    .actions{
-      position:sticky;
-      bottom:0;
-      padding:12px 0 calc(12px + env(safe-area-inset-bottom));
-      background:linear-gradient(180deg, rgba(11,15,25,0) 0%, rgba(11,15,25,.7) 18%, rgba(11,15,25,1) 42%);
-    }
-    .btn{
-      width:100%;
-      border:0;
-      border-radius:14px;
-      padding:14px 14px;
-      font-size:16px;
-      font-weight:600;
-      background:var(--btn);
-      color:var(--btnText);
-      box-shadow:var(--shadow);
-    }
-    .btn:disabled{opacity:.55}
-    .stats{
-      display:flex;flex-wrap:wrap;gap:10px;
-      margin:10px 0 14px;
-    }
-    .pill{
-      border:1px solid var(--border);
-      padding:8px 10px;
-      border-radius:999px;
-      color:var(--muted);
-      background:rgba(255,255,255,.03);
-      font-size:13px;
-    }
-    .list{display:flex;flex-direction:column;gap:10px;margin:12px 0 18px}
-    .card{
-      border:1px solid var(--border);
-      background:var(--card);
-      border-radius:var(--radius);
-      padding:12px 12px;
-      display:flex;
-      gap:12px;
-      align-items:flex-start;
-    }
-    .check{
-      margin-top:4px;
-      width:22px;height:22px;
-      accent-color:#2b66ff;
-    }
-    .meta{flex:1;min-width:0}
-    .title{font-size:16px;font-weight:700;margin:0 0 4px;word-break:break-word}
-    .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-    .tag{
-      font-size:12px;
-      padding:4px 8px;
-      border-radius:999px;
-      border:1px solid var(--border);
-      background:rgba(255,255,255,.03);
-      color:var(--muted);
-    }
-    .tag.ok{color:var(--ok);border-color:rgba(51,209,122,.35);background:rgba(51,209,122,.08)}
-    .tag.warn{color:var(--warn);border-color:rgba(255,176,32,.35);background:rgba(255,176,32,.08)}
-    .tag.danger{color:var(--danger);border-color:rgba(255,90,95,.35);background:rgba(255,90,95,.08)}
-    .tag.neutral{color:var(--muted)}
-    .small{color:var(--muted);font-size:13px;margin:6px 0 0}
-    .skeleton{
-      border:1px solid var(--border);
-      background:rgba(255,255,255,.04);
-      border-radius:var(--radius);
-      height:68px;
-      animation:pulse 1.2s ease-in-out infinite;
-    }
-    @keyframes pulse{0%{opacity:.6}50%{opacity:1}100%{opacity:.6}}
-  </style>
+
+  :root{
+    --bg:#F6FBFD;
+    --card:#FFFFFF;
+    --text:#2A2D34;
+    --muted:#4B5563;
+    --border:#D7E2E8;
+    --accent:#30C5FF;
+    --accent2:#5C946E;
+    --accent3:#80C2AF;
+    --danger:#D64545;
+    --warn:#C57F1E;
+    --shadow:0 10px 30px rgba(42,45,52,.10);
+    --radius:18px;
+  }
+
+  html,body{height:100%;}
+  body{
+    margin:0;
+    font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    background:var(--bg);
+    color:var(--text);
+  }
+
+  .wrap{max-width:520px;margin:0 auto;padding:18px 16px 100px;}
+
+  .header{display:flex;align-items:flex-start;justify-content:space-between;gap:12px;margin-top:10px;}
+  .h1{font-size:40px;font-weight:800;letter-spacing:-0.02em;display:flex;align-items:center;gap:10px;}
+  .sub{margin-top:6px;color:var(--muted);}
+
+  .pill{
+    display:inline-flex;align-items:center;gap:8px;
+    padding:8px 10px;border:1px solid var(--border);
+    border-radius:999px;background:#FFFFFF;
+    box-shadow:0 2px 10px rgba(42,45,52,.06);
+  }
+
+  .list{margin-top:18px;display:flex;flex-direction:column;gap:12px;}
+
+  .card{
+    display:flex;gap:12px;align-items:flex-start;
+    padding:14px 14px;
+    border:1px solid var(--border);
+    border-radius:var(--radius);
+    background:var(--card);
+    box-shadow:0 8px 24px rgba(42,45,52,.08);
+  }
+
+  .check{width:22px;height:22px;margin-top:4px;accent-color:var(--accent2);}
+
+  .meta{flex:1;min-width:0;}
+  .title{font-weight:750;font-size:16px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+
+  .row{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px;}
+
+  .tag{
+    display:inline-flex;align-items:center;justify-content:center;
+    padding:4px 10px;
+    border-radius:999px;
+    border:1px solid var(--border);
+    background:#F8FAFC;
+    color:var(--text);
+    font-size:13px;
+  }
+
+  .tag.ok{background:#EAF6EF;border-color:#CFE6D7;color:var(--accent2);}
+  .tag.due{background:#FFF3E0;border-color:#F6D7A8;color:var(--warn);}
+  .tag.overdue{background:#FDECEC;border-color:#F4C7C7;color:var(--danger);}
+  .tag.unknown{background:#F3F4F6;border-color:#E5E7EB;color:#6B7280;}
+
+  .small{margin-top:8px;color:var(--muted);font-size:13px;line-height:1.35;}
+
+  .banner{
+    padding:14px;
+    border-radius:var(--radius);
+    border:1px solid var(--border);
+    background:#FFFFFF;
+    color:var(--muted);
+  }
+
+  .error{
+    margin-top:14px;
+    padding:12px 14px;
+    border-radius:var(--radius);
+    border:1px solid #F4C7C7;
+    background:#FDECEC;
+    color:var(--danger);
+    white-space:pre-wrap;
+  }
+
+  .btnbar{
+    position:fixed;left:0;right:0;bottom:0;
+    padding:14px 16px 18px;
+    background:linear-gradient(to top, var(--bg) 70%, rgba(246,251,253,0));
+  }
+
+  .btn{
+    width:min(520px, calc(100vw - 32px));
+    margin:0 auto;
+    display:block;
+    border:none;
+    border-radius:16px;
+    padding:16px 18px;
+    font-weight:800;
+    font-size:16px;
+    color:#0A1B22;
+    background:var(--accent);
+    box-shadow:0 10px 25px rgba(48,197,255,.25);
+  }
+  .btn:disabled{opacity:.55;box-shadow:none;}
+
+  .skeleton{
+    height:74px;
+    border-radius:var(--radius);
+    border:1px solid var(--border);
+    background:linear-gradient(90deg, #FFFFFF, #F2F7FA, #FFFFFF);
+    background-size:200% 100%;
+    animation:shimmer 1.2s linear infinite;
+  }
+
+  @keyframes shimmer{0%{background-position:200% 0;}100%{background-position:-200% 0;}}
+
+</style>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
@@ -154,6 +162,9 @@
   if (tg) {
     tg.ready();
     try { tg.expand(); } catch(e){}
+    // Light theme + brand accents (safe to ignore if not supported)
+    try { tg.setHeaderColor('#A0DDE6'); } catch(e){}
+    try { tg.setBackgroundColor('#F6FBFD'); } catch(e){}
   }
 
   const initData = tg ? (tg.initData || "") : "";
