--- a/app.html
+++ b/app.html
@@ -376,7 +376,7 @@
         small.className = "small";
         const parts = [];
         if (it.days_since_last_watering !== null && it.days_since_last_watering !== undefined){
-          parts.push(`Последний полив: ${fmtDays(it.days_since_last_watering)}назад`);
+          parts.push(`Последний полив: ${fmtDays(it.days_since_last_watering)}. назад`);
         } else {
           parts.push("Последний полив: — ");
         }
